updated coloring and spacing issues

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
 body {
     background-color: blue;
     margin-top: 0%;
+    margin-left: 0%;
+    margin-right: 0%;
+}
+
+.sign {
+    width:80%
 }
 
 .icon {
